--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --coverage --config=unitTestsJestConfig.json",
     "lint": "eslint \"./**/*.js\" --fix",
-    "test:acceptance": "TEST_BASE_URL=https://mufrduk3bb.execute-api.eu-west-1.amazonaws.com/sit/ TEST_MODE=http jest ./tests/*",
+    "test:acceptance": "TEST_MODE=http jest ./tests/*",
     "test:integration": "TEST_MODE=handler ./node_modules/.bin/jest ./tests/*",
     "pretest": "npm run lint",
     "posttest": "npm audit",
